fix overflow bug.

--- a/themes/esquif/sass/hacks.scss
+++ b/themes/esquif/sass/hacks.scss
@@ -4,3 +4,7 @@
     display: none;
   }
 }
+
+.element-invisible {
+  width: 1px;
+}
